# poshet

./: .gitignore  .gitmodules  Makefile  README.md
docs/: poshet.tex
poshet/: CMakeLists.txt  mail.db
poshet/include/: App.hpp  AppController.hpp  Config.hpp  ConnectionBase.hpp  DashboardFrame.hpp  DashboardView.hpp  DatabaseConnection.hpp  Exceptions.hpp  FileManager.hpp  FrameSubscribers.hpp  GUIComponents.hpp  LoginController.hpp  LoginData.hpp  LoginFrame.hpp  LoginModel.hpp  LoginView.hpp  Mail.hpp  MailCreatorFrame.hpp  MailFileManager.hpp  Message.hpp  NewMailDialog.hpp  Pop3Connection.hpp  Session.hpp  SmtpConnection.hpp  UserData.hpp  UsersFrame.hpp  UsersManager.hpp  Utils.hpp
poshet/src/: App.cpp  AppController.cpp  Config.cpp  ConnectionBase.cpp  DashboardFrame.cpp  DatabaseConnection.cpp  FileManager.cpp  GUIComponents.cpp  LoginController.cpp  LoginData.cpp  LoginFrame.cpp  LoginView.cpp  Mail.cpp  MailCreatorFrame.cpp  MailFileManager.cpp  Message.cpp  NewMailDialog.cpp  Pop3Connection.cpp  Session.cpp  SmtpConnection.cpp  UserData.cpp  UsersFrame.cpp  UsersManager.cpp  Utils.cpp  main.cpp
